set(LIBRARY_NAME edu_ciaa_pan1312etu_driver)

set(LIBRARY_VERSION_MAJOR 0)
set(LIBRARY_VERSION_MINOR 1)
set(LIBRARY_VERSION_PATCH 0)
set(LIBRARY_VERSION ${LIBRARY_VERSION_MAJOR}.${LIBRARY_VERSION_MINOR}.${LIBRARY_VERSION_PATCH})

file(GLOB_RECURSE EDU_CIAA_PAN1323ETU_SOURCE_FILES src/*.c)
file(GLOB_RECURSE EDU_CIAA_PAN1323ETU_HEADER_FILES inc/*.h)

set(EDU_CIAA_PAN1312ETU_DRIVER ${CMAKE_CURRENT_SOURCE_DIR}/inc CACHE INTERNAL "EDU CIAA PAN1323ETU driver library include paths")

include_directories(${EDU_CIAA_PAN1312ETU_DRIVER})

set_source_files_properties(${CHIP_SOURCE_FILES} PROPERTIES LANGUAGE C)

add_library(${LIBRARY_NAME} STATIC
  ${EDU_CIAA_PAN1323ETU_SOURCE_FILES}
  ${EDU_CIAA_PAN1323ETU_HEADER_FILES}
)

set_target_properties(${LIBRARY_NAME} PROPERTIES
  OUTPUT_NAME "${LIBRARY_NAME}_${LIBRARY_VERSION}"
  LINKER_LANGUAGE C
)

include(${PLATFORM_FILE})